RM Build Scripts and Tests:
 * moved RM tests into separate folder structure
 * updated Gradle scripts with test source locations and dependancies .. 'gradlew test' will now attempt to execute the unit tests (even if they fail!)
 * eclipse project dependancies updated so unit tests execute within the RM eclipse project
 * TODO get the unit tests working reliabily! (still lots of refactoring of old tests to do)



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@35093 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261